[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident_rca_env"
version = "1.0.0"
description = "Incident RCA Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "openenv-core>=0.2.3",
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "openai",
    "python-dotenv"
]


[project.scripts]
server = "incident_rca_env.server.app:main"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["openenv.yaml", "README.md"]

[tool.pyright]
extraPaths = ["."]
executionEnvironments = [
  { root = "." }
]